# mcnr

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mcnr/: __init__.py  main.py  mcnr.py
tests/: test_mcnr.py
